[package]
name = "aoc-19"
version = "0.1.0"
authors = ["Mislav Markovic <mislav.markovic95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
superslice = "1.0.0"
float-cmp = "0.6.0"
ordered-float = "1.0.2"
regex = "1"
lazy_static = "1.4.0"
rayon = "1.3.0"