[package]
name = "aoc-23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }


[[bin]]
name = "day-01"
test = false
bench = false

[[bin]]
name = "day-02"
test = false
bench = false

